--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -4,10 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CameraFragment">
+    tools:context=".CameraFragment"
+    android:background="@drawable/newbackground">
+
+    <androidx.camera.view.PreviewView
+        android:id="@+id/previewView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 
     <Button
-        android:id="@+id/Button"
+        android:id="@+id/cameraCaptureButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="251dp"
@@ -26,7 +33,7 @@
         android:layout_marginEnd="55dp"
         android:layout_marginBottom="43dp"
         android:scaleType="centerCrop"
-        app:layout_constraintBottom_toTopOf="@+id/Button"
+        app:layout_constraintBottom_toTopOf="@+id/cameraCaptureButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
