--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -37,7 +37,9 @@
         android:id="@+id/cameraCaptureButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Fotoğraf Çek"
+        android:background="@drawable/rounded_button_background"
+        android:text=""
+        android:backgroundTint="@color/white"
         app:layout_constraintTop_toBottomOf="@id/imageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
